# cmake-boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: HelloWorld.cpp
src/fizzbuzz/: fizzbuzz.cpp  fizzbuzz.h
